<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_0288d1">


    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/px_30.0_dp"
        android:layout_marginRight="@dimen/px_30.0_dp"
        android:layout_marginTop="@dimen/px_20.0_dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/px_74.0_dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/px_10.0_dp" />

        <TextView
            android:id="@+id/Tv_SentToNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/one_time_password_hint"
            android:textColor="@color/Color_ffffff" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/px_40.0_dp" />

        <com.github.irvingryan.VerifyCodeView
            android:id="@+id/etOTP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:vcCodeLength="4"
            app:vcFont="@string/my_font"
            app:vcLineColor="#0019fa"
            app:vcLineStyle="underText"
            app:vcLineWidth="@dimen/px_5.0_dp"
            app:vcTextColor="@color/colorAccent"
            app:vcRemoveWhenError="false"
            app:vcTextSize="45sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/px_30.0_dp"
        android:layout_marginRight="@dimen/px_30.0_dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btVerify"
            android:layout_width="match_parent"
            android:layout_height="@dimen/px_40.0_dp"
            android:background="@drawable/button_selector"
            android:onClick="VerifyOtp"
            android:text="@string/Verify"
            android:textAllCaps="false"
            android:textColor="@android:color/background_dark"
            android:textSize="@dimen/px_14.0_dp" />

        <Button
            android:id="@+id/request_otp_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/px_53.0_dp"
            android:background="@android:color/transparent"
            android:gravity="bottom|center_horizontal"
            android:text="@string/ResendOTP"
            android:textAllCaps="false"
            android:textColor="@color/Color_ffffff"
            android:textSize="@dimen/px_12.0_dp" />

        <TextView
            android:id="@+id/Tv_NotThisNumber"
            android:layout_width="match_parent"
            android:layout_height="@dimen/px_53.0_dp"
            android:gravity="center"
            android:text="@string/sms_verify_code_not_this_number"
            android:textColor="@color/Color_ffffff"
            android:textSize="@dimen/px_12.0_dp" />
    </LinearLayout>


</RelativeLayout>